--- a/src/components/AboutMe.astro
+++ b/src/components/AboutMe.astro
@@ -1,44 +1,82 @@
 ---
 import Stacks from "./Stacks.astro";
-import Connect from "./Connect.astro"
-
+import Connect from "./Connect.astro";
 ---
-
 
 <h1 class="text-3xl font-title text-center font-bold mb-8">About me</h1>
 <div class="grid grid-cols-2 gap-4">
-    <div class="grid gap-4 ">
-        <div class="relative h-60 flex flex-col gap-6 overflow-hidden p-4 rounded-2xl border">
-            <div class="flex items-center gap-2">
-                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-map-pin size-[18px]"><path d="M20 10c0 6-8 12-8 12s-8-6-8-12a8 8 0 0 1 16 0Z"></path><circle cx="12" cy="10" r="3"></circle></svg>
-                <h2 class="text-sm font-light">FuZhou</h2>
-            </div>
-            <div class="flex flex-col items-center justify-center flex-1">
-                <img class="rounded-3xl h-42" src="/public/map.png">
-            </div>
-        </div>
+  <div class="grid gap-4">
+    <div
+      class="relative h-60 flex flex-col gap-6 overflow-hidden p-4 rounded-2xl border"
+    >
+      <div class="flex items-center gap-2">
+        <svg
+          xmlns="http://www.w3.org/2000/svg"
+          width="24"
+          height="24"
+          viewBox="0 0 24 24"
+          fill="none"
+          stroke="currentColor"
+          stroke-width="2"
+          stroke-linecap="round"
+          stroke-linejoin="round"
+          class="lucide lucide-map-pin size-[18px]"
+          ><path d="M20 10c0 6-8 12-8 12s-8-6-8-12a8 8 0 0 1 16 0Z"
+          ></path><circle cx="12" cy="10" r="3"></circle></svg
+        >
+        <h2 class="text-sm font-light">FuZhou</h2>
+      </div>
+      <div class="flex flex-col items-center justify-center flex-1">
+        <img class="rounded-3xl h-42" src="/public/map.png" />
+      </div>
+    </div>
 
-        <Stacks />
-    </div>
-    <div class="grid gap-4">
-        <Connect />
-        <div class="grid grid-cols-2 gap-4">
-            <div class="flex flex-col gap-6 rounded-xl p-4 border">
-                <div class="flex items-center gap-2">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 256 256"><path fill="currentColor" d="M128 24a104 104 0 1 0 104 104A104.11 104.11 0 0 0 128 24m0 192a88 88 0 1 1 88-88a88.1 88.1 0 0 1-88 88m64-88a8 8 0 0 1-8 8h-56a8 8 0 0 1-8-8V72a8 8 0 0 1 16 0v48h48a8 8 0 0 1 8 8"/></svg>
-                    <h2 class="text-sm font-light">Living</h2>
-                </div>
-                <div class="font-title flex grow items-center justify-center text-3xl font-semibold">35<!-- --> <!-- -->years</div>
-            </div>
-            <div class="flex flex-col gap-6 rounded-xl p-4 border">
-                <div class="flex items-center gap-2">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path fill="currentColor" d="M18 5.808q-.698 0-1.195-.497t-.497-1.195t.497-1.196T18 2.423t1.195.497t.497 1.196q0 .698-.497 1.195T18 5.808M16.73 21.5v-7.77q0-.873-.396-1.573q-.397-.7-1.178-1.11l1.048-2.749q.2-.548.699-.885T18 7.078t1.097.327t.7.894l2.703 7.087h-2.654V21.5zm-4.232-10.077q-.546 0-.926-.382t-.38-.928t.383-.925t.927-.38t.926.382t.38.928t-.382.925q-.383.38-.928.38M5.5 5.808q-.698 0-1.195-.497t-.497-1.195t.497-1.196T5.5 2.423t1.195.497t.497 1.196q0 .698-.497 1.195T5.5 5.808M3.73 21.5v-6.577H2.078V9.039q0-.667.475-1.141t1.14-.475h3.616q.666 0 1.14.475t.475 1.14v5.885H7.269V21.5zm7.54 0V18h-1v-4.27q0-.512.358-.871t.872-.359h2q.513 0 .872.359t.359.872V18h-1v3.5z"/></svg>
-                    <h2 class="text-sm font-light">Family</h2>
-                </div>
-                <div class="flex flex-col items-center justify-center flex-1">
-                    <img class="rounded-3xl" src="/public/family.jpg">
-                </div>
-            </div>
+    <Stacks />
+  </div>
+  <div class="grid gap-4">
+    <Connect />
+    <div class="grid grid-cols-2 gap-4">
+      <div class="flex flex-col gap-6 rounded-xl p-4 border">
+        <div class="flex items-center gap-2">
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            width="20"
+            height="20"
+            viewBox="0 0 256 256"
+            ><path
+              fill="currentColor"
+              d="M128 24a104 104 0 1 0 104 104A104.11 104.11 0 0 0 128 24m0 192a88 88 0 1 1 88-88a88.1 88.1 0 0 1-88 88m64-88a8 8 0 0 1-8 8h-56a8 8 0 0 1-8-8V72a8 8 0 0 1 16 0v48h48a8 8 0 0 1 8 8"
+            ></path></svg
+          >
+          <h2 class="text-sm font-light">Living</h2>
         </div>
+        <div
+          class="font-title flex grow items-center justify-center text-3xl font-semibold"
+        >
+          35<!-- -->
+          <!-- -->years
+        </div>
+      </div>
+      <div class="flex flex-col gap-6 rounded-xl p-4 border">
+        <div class="flex items-center gap-2">
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            width="24"
+            height="24"
+            viewBox="0 0 24 24"
+            ><path
+              fill="currentColor"
+              d="M18 5.808q-.698 0-1.195-.497t-.497-1.195t.497-1.196T18 2.423t1.195.497t.497 1.196q0 .698-.497 1.195T18 5.808M16.73 21.5v-7.77q0-.873-.396-1.573q-.397-.7-1.178-1.11l1.048-2.749q.2-.548.699-.885T18 7.078t1.097.327t.7.894l2.703 7.087h-2.654V21.5zm-4.232-10.077q-.546 0-.926-.382t-.38-.928t.383-.925t.927-.38t.926.382t.38.928t-.382.925q-.383.38-.928.38M5.5 5.808q-.698 0-1.195-.497t-.497-1.195t.497-1.196T5.5 2.423t1.195.497t.497 1.196q0 .698-.497 1.195T5.5 5.808M3.73 21.5v-6.577H2.078V9.039q0-.667.475-1.141t1.14-.475h3.616q.666 0 1.14.475t.475 1.14v5.885H7.269V21.5zm7.54 0V18h-1v-4.27q0-.512.358-.871t.872-.359h2q.513 0 .872.359t.359.872V18h-1v3.5z"
+            ></path></svg
+          >
+          <h2 class="text-sm font-light">Family</h2>
+        </div>
+        <div class="flex flex-col items-center justify-center flex-1">
+          <img class="rounded-3xl" src="/public/family.jpg" />
+        </div>
+      </div>
     </div>
+  </div>
 </div>
+
+<div class="my-8 flex items-center justify-center"><a class="hover:bg-slate-400/10 text-xs border h-10 flex items-center px-4 rounded-xl" href="/about">Know more about me</a></div>
