add rrecent post

--- a/src/components/AboutMe.astro
+++ b/src/components/AboutMe.astro
@@ -1,6 +1,7 @@
 ---
 import Stacks from "./Stacks.astro";
 import Connect from "./Connect.astro";
+import MoreTag from "./MoreTag.astro";
 ---
 
 <h1 class="text-3xl font-title text-center font-bold mb-8">About me</h1>
@@ -79,4 +80,5 @@ import Connect from "./Connect.astro";
   </div>
 </div>
 
-<div class="my-8 flex items-center justify-center"><a class="hover:bg-slate-400/10 text-xs border h-10 flex items-center px-4 rounded-xl" href="/about">Know more about me</a></div>
+
+<MoreTag title="Know more about me" />
