--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,6 +2,7 @@
 import Header from "../components/Header.astro";
 import Hero from "../components/Hero.astro"	
 import AboutMe from "../components/AboutMe.astro"
+import RecentPost from "../components/RecentPost.astro";
 ---
 
 <html lang="en">
@@ -17,6 +18,7 @@ import AboutMe from "../components/AboutMe.astro"
 		<main class="flex flex-col justify-center">
 			<Hero />
 			<AboutMe />
+			<RecentPost />
 		</main>
 	</body>
 </html>
