--- a/src/components/RecentPost.astro
+++ b/src/components/RecentPost.astro
@@ -1,2 +1,40 @@
 ---
+import { getCollection } from "astro:content";
+import FormattedDate from "./FormattedDate.astro";
+import TagLink from "./TagLink.astro";
+import MoreTag from "./MoreTag.astro";
+
+const posts = await getCollection("blog");
+let numberOfPostsToDisplay = 3;
+let recentPosts = posts.slice(0, numberOfPostsToDisplay);
 ---
+
+<div class="px-4 flex flex-col gap-4 mt-16">
+    <h1 class="text-3xl font-title text-center font-bold mb-8">Recent Publications</h1>
+    {
+        recentPosts.map((post) => (
+      <div class="flex gap-2 justify-between border-b pb-4">
+        <div class="flex flex-col gap-4">
+          <FormattedDate date={post.data.date} />
+          <a class="font-bold text-lg" href={`/blog/${post.slug}`}>
+            {post.data.title}
+          </a>
+          <div class="flex gap-2">
+              {post.data.tags?.map((i) => {
+                return <TagLink tag={i} />;
+              })}
+          </div>
+        </div>
+        <a href={`/blog/${post.slug}`}>
+          <img
+            src={post.data.cover}
+            alt=""
+            class="w-40 h-24 bg-contain border border-gray-200"
+          />
+        </a>
+      </div>
+    ))
+    }
+   
+   <MoreTag title="View More" />
+</div>
