--- a/src/components/AboutMe.astro
+++ b/src/components/AboutMe.astro
@@ -2,6 +2,12 @@
 import Stacks from "./Stacks.astro";
 import Connect from "./Connect.astro";
 import MoreTag from "./MoreTag.astro";
+
+import familyImage from  "../assets/family.jpg";
+import mapImage from  "../assets/map.png";
+
+import { Image } from 'astro:assets';
+
 ---
 
 <h1 class="text-3xl font-title text-center font-bold mb-8">About me</h1>
@@ -28,7 +34,7 @@ import MoreTag from "./MoreTag.astro";
         <h2 class="text-sm font-light">FuZhou</h2>
       </div>
       <div class="flex flex-col items-center justify-center flex-1">
-        <img class="rounded-3xl h-42" src="/public/map.png" />
+        <Image alt="A map generate by DALLE3" class="rounded-3xl h-42" src={mapImage} />
       </div>
     </div>
 
@@ -73,7 +79,7 @@ import MoreTag from "./MoreTag.astro";
           <h2 class="text-sm font-light">Family</h2>
         </div>
         <div class="flex flex-col items-center justify-center flex-1">
-          <img class="rounded-3xl" src="/public/family.jpg" />
+          <Image alt="My family" class="rounded-3xl" src={familyImage} />
         </div>
       </div>
     </div>
