--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -9,7 +9,7 @@ import Footer from "../components/Footer.astro"
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="viewport" content="width=device-width" />
 		<meta name="generator" content={Astro.generator} />
-		<title>Astro</title>
+		<title>ibucoin-A Full Stack Developer</title>
 	</head>
 	<body class="w-full max-w-screen-md mx-auto my-4 transition-colors duration-300 min-h-screen">
 		<Header />
