--- a/src/components/AboutMe.astro
+++ b/src/components/AboutMe.astro
@@ -3,8 +3,6 @@ import Stacks from "./Stacks.astro";
 import Connect from "./Connect.astro";
 import MoreTag from "./MoreTag.astro";
 
-import familyImage from  "../assets/family.jpg";
-import mapImage from  "../assets/map.png";
 
 import { Image } from 'astro:assets';
 
@@ -34,7 +32,7 @@ import { Image } from 'astro:assets';
         <h2 class="text-sm font-light">FuZhou</h2>
       </div>
       <div class="flex flex-col items-center justify-center flex-1">
-        <Image alt="A map generate by DALLE3" class="rounded-3xl h-42" src={mapImage} />
+        <Image alt="A map generate by DALLE3" class="rounded-3xl h-42" src='/map.png' />
       </div>
     </div>
 
@@ -79,7 +77,7 @@ import { Image } from 'astro:assets';
           <h2 class="text-sm font-light">Family</h2>
         </div>
         <div class="flex flex-col items-center justify-center flex-1">
-          <Image alt="My family" class="rounded-3xl" src={familyImage} />
+          <Image alt="My family" class="rounded-3xl" src="/family.jpg" />
         </div>
       </div>
     </div>
