--- a/src/components/AboutMe.astro
+++ b/src/components/AboutMe.astro
@@ -4,8 +4,6 @@ import Connect from "./Connect.astro";
 import MoreTag from "./MoreTag.astro";
 
 
-import { Image } from 'astro:assets';
-
 ---
 
 <h1 class="text-3xl font-title text-center font-bold mb-8">About me</h1>
@@ -32,7 +30,7 @@ import { Image } from 'astro:assets';
         <h2 class="text-sm font-light">FuZhou</h2>
       </div>
       <div class="flex flex-col items-center justify-center flex-1">
-        <Image alt="A map generate by DALLE3" class="rounded-3xl h-42" src='/map.png' />
+        <img alt="A map generate by DALLE3" class="rounded-3xl h-42" src='/map.png' />
       </div>
     </div>
 
@@ -77,7 +75,7 @@ import { Image } from 'astro:assets';
           <h2 class="text-sm font-light">Family</h2>
         </div>
         <div class="flex flex-col items-center justify-center flex-1">
-          <Image alt="My family" class="rounded-3xl" src="/family.jpg" />
+          <img alt="My family" class="rounded-3xl" src="/family.jpg" />
         </div>
       </div>
     </div>
