--- a/src/components/RecentPost.astro
+++ b/src/components/RecentPost.astro
@@ -4,7 +4,10 @@ import FormattedDate from "./FormattedDate.astro";
 import TagLink from "./TagLink.astro";
 import MoreTag from "./MoreTag.astro";
 
-const posts = await getCollection("blog");
+const posts = (await getCollection("blog")).sort(
+  (a, b) => new Date(b.data.date).getTime()-new Date(a.data.date).getTime()
+);
+
 let numberOfPostsToDisplay = 3;
 let recentPosts = posts.slice(0, numberOfPostsToDisplay);
 ---
