--- a/src/components/AboutMe.astro
+++ b/src/components/AboutMe.astro
@@ -83,4 +83,4 @@ import MoreTag from "./MoreTag.astro";
 </div>
 
 
-<MoreTag title="Know more about me" />
+<MoreTag title="Know more about me" href="/"   />
