--- a/src/components/RecentPost.astro
+++ b/src/components/RecentPost.astro
@@ -39,5 +39,5 @@ let recentPosts = posts.slice(0, numberOfPostsToDisplay);
     ))
     }
    
-   <MoreTag title="View More" />
+   <MoreTag title="View More" href="/posts" />
 </div>
