--- a/src/components/PostContent.astro
+++ b/src/components/PostContent.astro
@@ -1,10 +1,14 @@
 ---
 import { type CollectionEntry } from "astro:content";
+  import rehypePrettyCode from 'rehype-pretty-code'
+
+
 
 
 type Props = {
   post: CollectionEntry<"blog">;
 };
+
 
 const { post } = Astro.props;
 const { Content } = await post.render();
@@ -115,7 +119,7 @@ code {
 }
 
 pre {
-  @apply !px-0 rounded-lg p-2;
+  @apply rounded-lg p-2 mb-8 px-4;
 }
 
 code {
@@ -140,6 +144,6 @@ code[data-line-numbers] > [data-line]::before {
   counter-increment: line;
   content: counter(line);
   @apply inline-block w-4 mr-4 text-right text-gray-500;
-}
+} 
 
 </style>
