--- a/src/components/Stacks.astro
+++ b/src/components/Stacks.astro
@@ -20,7 +20,7 @@
       ><path
         d="M4 14a1 1 0 0 1-.78-1.63l9.9-10.2a.5.5 0 0 1 .86.46l-1.92 6.02A1 1 0 0 0 13 10h7a1 1 0 0 1 .78 1.63l-9.9 10.2a.5.5 0 0 1-.86-.46l1.92-6.02A1 1 0 0 0 11 14z"
       ></path></svg
-    ><h2 class="text-sm font-light">Stacks</h2>
+    ><h2 class="text-sm font-light">技术</h2>
   </div>
   <div
     class="group flex overflow-hidden flex-row py-4"
