--- a/src/components/Connect.astro
+++ b/src/components/Connect.astro
@@ -21,7 +21,7 @@ import { GITHUB,X } from "../config";
       ></path><path
         d="M14 11a5 5 0 0 0-7.54-.54l-3 3a5 5 0 0 0 7.07 7.07l1.71-1.71"
       ></path></svg
-    ><h2 class="text-sm font-light">Connect</h2>
+    ><h2 class="text-sm font-light">联系我</h2>
   </div>
   <div class="flex flex-col gap-4 px-2">
     <a
