--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -6,7 +6,8 @@ import { SITE_TITLE, MENUS } from "../config";
 
 <header class="py-4 pt-2 px-4 gap-5 mb-10 w-full">
     <div class="flex w-full justify-between items-end border-b lg:border-none pb-4 lg:pb-0">
-        <a class="font-semibold text-xl flex gap-2 items-center group" href="/"><Icon name="radix-icons:crumpled-paper" class="w-5 h-5 group-hover:rotate-[17deg]" />ibucoin</a>
+        <a class="font-semibold text-xl flex gap-2 items-center group" href="/">
+          <img src="logo.png" class="w-5">ibucoin</a>
         
         <div class="flex flex-row gap-4">
             {
