--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -2,9 +2,8 @@
 ---
 
 <div class="px-4 md:px-16 flex flex-col gap-4 md:my-10">
-    <h1 class="text-2xl md:text-5xl w-full">🧑‍🚀 Hello, I am ibucoin!</h1>
+    <h1 class="text-2xl md:text-5xl w-full">🧑‍🚀 Hello, 我是 ibucoin伊布</h1>
     <p class="w-full text-justify text-base md:text-lg">
-        I am a <span class="bg-clip-text text-transparent bg-gradient-to-r from-[#0077ff] to-[#00e7df]">full-stack</span> developer,currently residing in Fuzhou, China. At this point in my life, I'm looking to transition into 
-        freelance work.
+        2 娃奶爸，家庭地位最底级，一个会用 AI 的组装代码工程师，一个股市的超级反指 (亏钱中)。
     </p>
   </div>
