--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -6,10 +6,10 @@ import Footer from "../components/Footer.astro"
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+		<link rel="icon" type="image/svg+xml" href="/favicon.png" />
 		<meta name="viewport" content="width=device-width" />
 		<meta name="generator" content={Astro.generator} />
-		<title>ibucoin-A Full Stack Developer</title>
+		<title>ibucoin伊布-全栈AI开发</title>
 	</head>
 	<body class="w-full max-w-screen-md mx-auto my-4 transition-colors duration-300 min-h-screen">
 		<Header />
