--- a/src/components/AboutMe.astro
+++ b/src/components/AboutMe.astro
@@ -4,6 +4,15 @@ import Connect from "./Connect.astro";
 import MoreTag from "./MoreTag.astro";
 
 
+function getTheDays() {
+  const now = new Date();
+  const birthDate = new Date("1989-08-03");
+  const diff = now - birthDate;
+  return parseInt(diff / (1000 * 60 * 60 * 24)); // 计算相差的天数并返回，返回值为整数，不保留小数位，例如：1234567890 天
+}
+
+const myDay = getTheDays()
+
 ---
 
 <h1 class="text-3xl font-title text-center font-bold mb-8">关于我</h1>
@@ -56,7 +65,7 @@ import MoreTag from "./MoreTag.astro";
         <div
           class="font-title flex grow items-center justify-center text-3xl font-semibold"
         >
-          13140天
+          {myDay}天
         </div>
       </div>
       <div class="flex flex-col gap-6 rounded-xl p-4 border">
