--- a/src/components/RecentPost.astro
+++ b/src/components/RecentPost.astro
@@ -1,8 +1,12 @@
 ---
-import { getCollection } from "astro:content";
+import { getCollection,type CollectionEntry } from "astro:content";
 import FormattedDate from "./FormattedDate.astro";
 import TagLink from "./TagLink.astro";
 import MoreTag from "./MoreTag.astro";
+
+type Post = CollectionEntry<'blog'> & {
+  slug: string;
+};
 
 const posts = (await getCollection("blog")).sort(
   (a, b) => new Date(b.data.date).getTime()-new Date(a.data.date).getTime()
@@ -15,7 +19,7 @@ let recentPosts = posts.slice(0, numberOfPostsToDisplay);
 <div class="px-4 flex flex-col gap-4 mt-16">
     <h1 class="text-3xl font-title text-center font-bold mb-8">最近发布</h1>
     {
-        recentPosts.map((post) => (
+        recentPosts.map((post:Post) => (
       <div class="flex gap-2 justify-between border-b pb-4">
         <div class="flex flex-col gap-4">
           <FormattedDate date={post.data.date} />
